# RL-Basics

./: Karapathy_intro_to_nn.ipynb  README.md  main.py  pyproject.toml
deep_learning_for_RL_basics/: basic_nn.py  basic_nn_using_torch.py  digit_MNIST.py  sine_analysis_using_nn.py
dqn_basics/: DQN_TUNING_LOG.md  dqn_CartPole.py  dqn_day1.py  dqn_without_any_extra_tests.py
gym_env/: __init__.py
gym_env/envs/: __init__.py
gym_env/wrappers/: __init__.py
practice_tuts_rl/: day_1.py  setting_up_env.py
