[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gym_env"]

[project]
name = "gym_env"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "gymnasium[box2d]",
  "pygame>=2.1.3",
  "pre-commit",
  "swig>=4.4.1",
  "tqdm>=4.67.3",
  "matplotlib>=3.10.9",
  "seaborn>=0.13.2",
  "keras>=3.12.2",
]
